added some responsive

--- a/index.html
+++ b/index.html
@@ -13,7 +13,20 @@
 </head>
 <!-- header start -->
 <header>
-
+    <nav class="nav-property ">
+        <span class="nav-grid">
+            <a href=""><img src="images/icons/logo.png" alt="" class="logo">
+            </a>
+            <a href="" class="idea white">idea</a>
+        </span>
+        <span>
+            <span class="nav-grid-2">
+                <a href="" class="white idea-2">Home</a>
+                <a href="" class="white idea-2">About</a>
+                <a href="" class="white idea-2">Works</a>
+                <a href="" class="white idea-2"><img src="images/icons/profile.png" alt="" class="profile-icon"></a>
+            </span>
+    </nav>
 </header>
 <!-- header end -->
 <main>
