--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leader Board</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <!-- fonts-awesome -->
     <script src="https://kit.fontawesome.com/5e88ed11e9.js" crossorigin="anonymous"></script>
     <!-- stylesheet -->
@@ -24,7 +25,8 @@
                 <a href="" class="white idea-2">Home</a>
                 <a href="" class="white idea-2">About</a>
                 <a href="" class="white idea-2">Works</a>
-                <a href="" class="white idea-2"><img src="images/icons/profile.png" alt="" class="profile-icon"></a>
+                <a href="" class="white idea-2 animate__hinge"><img src="images/icons/profile.png" alt=""
+                        class="profile-icon"></a>
             </span>
     </nav>
 </header>
@@ -152,7 +154,7 @@
             </div>
             <div class="course">
                 <div class="course-banner">
-                    <img src="images/courses/course-3.png" alt="">
+                    <img src="images/courses/course-3.png" alt="" class="fff">
                 </div>
                 <div class="courses-detail">
                     <h3 class="courses-title">React - The Complete Guide 2020</h3>
